@@ -3,8 +3,7 @@ using System;
 
 namespace themonospot_Base_Main
 {
-	
-	[Serializable]
+
 	public class clsConfiguration
 	{
 		
@@ -27,6 +26,23 @@ namespace themonospot_Base_Main
         	set { _autoReport = value; }
         }
 		
+		
+		public void UpdateConfigFile(string configfilepath)
+		{
+			ABasile.SettingsManager SM = new ABasile.SettingsManager(configfilepath);
+			SM.WriteString("Defaults", "defaultPath", my_defaultPath);
+			SM.WriteBool("Defaults", "autoReport", _autoReport);
+			SM.Save();
+			SM = null;
+		}
+
+		public void ReadConfigFile(string configfilepath)
+		{
+			ABasile.SettingsManager SM = new ABasile.SettingsManager(configfilepath);
+			my_defaultPath = SM.ReadString("Defaults", "defaultPath", "");
+			_autoReport = SM.ReadBool("Defaults", "autoReport", false);			
+			SM = null;
+		}
 		
 	}
 }
