@@ -1,3 +1,12 @@
+2009-05-16  Armando Basile  <hmandevteam@gmail.com>
+
+	* themonospot-base.csproj:
+	* src/components/SettingsManager.cs:
+	* src/components/clsConfiguration.cs:
+	* src/components/clsThemonospotBase.cs: 
+
+	* bug fixed: settings file management
+
 2009-05-14  Armando Basile  <hmandevteam@gmail.com>
 
 	* src/components/clsParserAVI.cs: 
